--- a/notebook/research.ipynb
+++ b/notebook/research.ipynb
@@ -4648,16 +4648,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "id": "f175aab7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "pickle.dump(model, open('artifacts/model.pkl', 'wb'))\n",
-    "pickle.dump(book_names, open('artifacts/book_names.pkl', 'wb'))\n",
-    "pickle.dump(final_rating, open('artifacts/final_rating.pkl', 'wb'))\n",
-    "pickle.dump(book_pivot, open('artifacts/book_pivot.pkl','wb'))"
+    "# import pickle\n",
+    "# pickle.dump(model, open('artifacts/model.pkl', 'wb'))\n",
+    "# pickle.dump(book_names, open('artifacts/book_names.pkl', 'wb'))\n",
+    "# pickle.dump(final_rating, open('artifacts/final_rating.pkl', 'wb'))\n",
+    "# pickle.dump(book_pivot, open('artifacts/book_pivot.pkl','wb'))"
    ]
   },
   {
